# bc-ferry-schedules

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  LICENSE-MIT.txt  README.md  rust-toolchain.toml
.github/workflows/: build.yaml  scrape.yaml
frontend/: Cargo.toml  Trunk.toml  index.html  index.scss
frontend/src/: imports.rs  main.rs  sailings_component.rs  sailings_processor.rs  types.rs  utils.rs
scraper/: Cargo.toml
scraper/src/: annotations.rs  cache.rs  constants.rs  depart_time_and_row_annotations.rs  dynamodb.rs  imports.rs  lib.rs  macros.rs  main.rs  output.rs  sailings.rs  scraper.rs  types.rs  utils.rs  weekday_dates.rs  weekday_restrictions.rs
scraper/src/scraper/: non_tsawwassen.rs  other_routes.rs  route5.rs  tsawwassen.rs
shared/: Cargo.toml
shared/src/: constants.rs  imports.rs  lib.rs  types.rs  utils.rs
