[package]
name = "ferrysched_frontend"
version = "0.1.0"
authors = ["Emanuel Borsboom <emanuel@borsboom.io>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
ferrysched_shared = { path = "../shared", features = ["wasmbind"] }
reqwasm = "0.5"
serde = { version = "1.0", features = ["derive"] }
time = { version = ">=0.3.0, <0.3.20", features = ["formatting", "parsing", "serde", "serde-human-readable"] }
time-humanize = "0.1"
time-macros = ">=0.2.0, <0.2.8"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = "0.3"
yew = "0.19"
yew-router = "0.16"
