[package]
name = "ferrysched_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
aws-config = "0.6"
aws-sdk-dynamodb = "0.6"
chrono = "0.4"
chrono-tz = "0.6"
clap = { version = "3.0", features = ["derive", "env"] }
directories = "4.0"
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
once_cell = "1.9"
scraper = "0.12"
selectors = "0.22"
tokio = { version = "1.16", features = ["full"] }
regex = "1.5"
reqwest = "0.11"
