[package]
name = "ferrysched_shared"
version = "0.1.0"
authors = ["Emanuel Borsboom <emanuel@borsboom.io>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
const_format = "0.2"
log = "0.4"
once_cell = "1.9"
serde = { version = "1.0", features = ["derive"] }
stdweb = { version = "0.4", optional = true }
strum = "0.24"
strum_macros = "0.24"
time = "0.3"
time-macros = "0.2"
time-tz = "1.0"

[features]
wasmbind = ["dep:stdweb"]
